force-app/main/default/objects/Ticket_Comment__c/Ticket_Comment__c.object-meta.xml
<CustomObject>
    <label>Ticket Comment</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Ticket Comment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Comment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>