force-app/main/default/objects/Ticket_Comment__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Author of Comment</description>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ticket_Comment</relationshipName>
    <type>Lookup</type>
</CustomField>