force-app/main/default/objects/Ticket_Comment__c/fields/Is_Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal note (Agent-only), not visible to the employee.</description>
    <label>Is Internal Note</label>
    <type>Checkbox</type>
</CustomField>