force-app/main/default/objects/Ticket_Comment__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <description>Parent TIcket</description>
    <label>Ticket</label>
    <referenceTo>IT_Ticket__c</referenceTo>
    <relationshipLabel>Ticket Comment</relationshipLabel>
    <relationshipName>Ticket_Comment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>